mobile.css
html, body {overflow-x: hidden;}

a, p, option {
   font-family: Oswald;
   font-size: 16px;
   margin-top: 8px;
}

.appear {display: inline-block;}

.d-flex {
    min-height: 100vh;
    position: sticky;
    z-index: 1;
    background: #ffffff;
}

.footer {
    position: sticky;
    bottom: 0;
    left: 0;
    width: 100%;
  
    background: #000000;
    display: grid;
    padding: 15px;
}
.full-width-bar {
   margin: 0 -9999rem;
   /* add back negative margin value */
   padding: 0.25rem 9999rem;
   background: rgb(0, 0, 0);
 }

.top_header {
   position: absolute;
   display: block;
   height: 100px;
}

.contact_img {
   position: absolute;
   bottom: 0;
   right: 50px;
}

.main_fields {
   position: relative;
   display: block;
   /*left: 412px;*/
   margin-top: 140px;
   padding: 10px;
}

.userInput p, .userInput2 p, .userInput3 p, .userInput4 p, .userInput5 p {
   width: 250px;
}

.hidden, .hidden2, .hidden3, .hidden4, .hidden5 {
   display: none;
   min-width: 160px;
}

.show {display: inline-block;}

